# RustConn

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REFACTORING_PLAN.md  TODO.md  audit.toml  build_macos.sh  deny.toml  flake.nix  messages.mo  run_debug.sh  translate_po.py
.github/workflows/: check-cli-versions.yml  ci.yml  flathub-update.yml  flatpak.yml  release.yml  snap.yml
.kiro/agents/: rust-quality-check.md  security-reviewer.md  uk-translation-reviewer.md
.kiro/hooks/: cargo-security-scan.json  cargo-security-scan.kiro.hook  commit-message-helper.kiro.hook  crate-boundary-guard.kiro.hook  dependency-audit.kiro.hook  kirograph-mark-dirty-on-create.json  kirograph-mark-dirty-on-save.json  kirograph-sync-on-agent-stop.json  kirograph-sync-on-delete.json  post-session-diagnostics.kiro.hook  post-task-diagnostics.kiro.hook  post-task-tests.kiro.hook  pre-commit-checks.kiro.hook  release-version.kiro.hook  (+5 more)
debian/: changelog  control  rules
docs/: AI_DEVELOPMENT.md  ARCHITECTURE.md  BUILD.md  CI_BUILD_FLOW.md  CLI_REFERENCE.md  GTK_UPGRADE_PLAN.md  INSTALL.md  MACOS_BUILD.md  MACOS_CHANGELOG.md  SNAP.md  USER_GUIDE.md  ZERO_TRUST.md
po/: POTFILES.in  be.po  cs.po  da.po  de.po  es.po  fr.po  it.po  kk.po  nl.po  pl.po  pt.po  rustconn.pot  sk.po  sv.po  uk.po  uz.po  zh-cn.po
rustconn/: Cargo.toml
rustconn-cli/: Cargo.toml
rustconn-core/: Cargo.toml
rustconn-pty-sys/: Cargo.toml
rustconn-pty-sys/src/: lib.rs
scripts/: macos-build.sh  release.sh
semantic-review/: 2025-07-21-153606-0.19.1.md
snap/: snapcraft.yaml
(+363 files in other folders)
